[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'


[tool.poetry]
name = "domainfiltering"
version = "0.1.0"
description = ""
authors = ["paveL1boyko <pave1.boyk0ok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
